--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
-            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>portfolio</span></a>
+            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</span></a>a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"></button>
+          
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="#">Hidden brand</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
