--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><b><span>P</span>ortfolio</b></a>
+          <a class="navbar-brand" href="#"><span>P</span>ortfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,7 +30,15 @@
           </div>
         </div>
       </nav>
-       
+      <div id="about">
+        <h2><span class="font-primary">A</span>bout</span></h2>
+        <img src="img/sample-women.jpg">
+        <div class="name">Suneetha Pallapothula</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Django / Java / Express.js / AWS(Basics) / Docker (Basics)</div>
+    </div>
+       <p>Myself Suneetha Pallapothula. I Restarted my Career after long time.</p>
+       <div class="email">SuneethaCareer01@gmail.com</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
