--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
           </div>
         </div>
       </nav>
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</span></h2>
+        <img src="sample.jpg" alt="the image is failed to load"/>
+        <div class="name"><h2>Suneetha Pallapothula</h2></div>
+        
+        <div class="vocation"><h3>Web Application Developer</h3></div>
+        <div class="skills" color="cyan">HTML / CSS / JavaScript / React.js / Redux / Django / Java / Express.js / AWS(Basics) / Docker (Basics)</div>
+       <h6>I Restarted my Career after long time</h6>
+       <div class="email">SuneethaCareer01@gmail.com</div>
+       <div class="icons">
+        <a href="#"><i class="bi bi-github"></i></a>
+        <a href="#"><i class="bi bi-linkedln ms-3"></i></a>
+       </div>
+    </div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
