--- a/index.html
+++ b/index.html
@@ -40,9 +40,26 @@
        <h6>I Restarted my Career after long time</h6>
        <div class="email">SuneethaCareer01@gmail.com</div>
        <div class="icons">
-        <a href="#"><i class="bi bi-github"></i></a>
-        <a href="#"><i class="bi bi-linkedln ms-3"></i></a>
+        <ahref="#"><i class="bi bi-github"></i></a>
+        <ahref="#"><i class="bi bi-linkedln ms-3"></i></a>
        </div>
+    </div>
+    <div id="Project">
+        <h2><spam class="font-primary">P</spam>roject</h2>
+        <div class="card mb-3">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="project-twitter.png" alt="twitter Project">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+        </div>
     </div>
 
 
