--- a/index.html
+++ b/index.html
@@ -46,18 +46,39 @@
     </div>
     <div id="Project">
         <h2><spam class="font-primary">P</spam>roject</h2>
-        <div class="card mb-3">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="project-twitter.png" alt="twitter Project">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
+        <div class="card-1">
+            <div class="card-image">
+                <img src="project-twitter.png" alt="twitter Project"> 
+            </div>
+            <div class="card-body">
+                  <h5 class="card-title">Twitter clone</h5>
+                  <p class="card-text">This is a Twitter base project using HTML / CSS</p>
+                  <p class="card-text"><small class="text-muted">
+                    Test Login Account <br>
+                    Email : test@gmail.com <br>
+                    Password : 12345
+                  </small></p>
+                  <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+            </div>
+        </div>
+    </div>
+    <div id="Project1">
+        <h2><spam class="font-primary">P</spam>roject</h2>
+        <div class="card-2">
+            <div class="card-image">
+                <img src="project-twitter.png" alt="twitter Project"> 
+            </div>
+            <div class="card-body">
+                  <h5 class="card-title">Twitter clone</h5>
+                  <p class="card-text">This is a Twitter base project using HTML / CSS</p>
+                  <p class="card-text"><small class="text-muted">
+                    Test Login Account <br>
+                    Email : test@gmail.com <br>
+                    Password : 12345
+                  </small></p>
+                  <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
             </div>
         </div>
     </div>
