--- a/index.html
+++ b/index.html
@@ -44,41 +44,26 @@
         <ahref="#"><i class="bi bi-linkedln ms-3"></i></a>
        </div>
     </div>
-    <div id="Project">
-        <h2><spam class="font-primary">P</spam>roject</h2>
-        <div class="card-1">
-            <div class="card-image">
-                <img src="project-twitter.png" alt="twitter Project"> 
+    <div id="Projects">
+        <div class=“section”>
+            <div class=“left-section”>
+               <img src="project-twitter.png" alt=“Image” />
             </div>
-            <div class="card-body">
-                  <h5 class="card-title">Twitter clone</h5>
-                  <p class="card-text">This is a Twitter base project using HTML / CSS</p>
-                  <p class="card-text"><small class="text-muted">
-                    Test Login Account <br>
-                    Email : test@gmail.com <br>
-                    Password : 12345
-                  </small></p>
-                  <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
-            </div>
-        </div>
-    </div>
-    <div id="Project1">
-        <h2><spam class="font-primary">P</spam>roject</h2>
-        <div class="card-2">
-            <div class="card-image">
-                <img src="project-twitter.png" alt="twitter Project"> 
-            </div>
-            <div class="card-body">
-                  <h5 class="card-title">Twitter clone</h5>
-                  <p class="card-text">This is a Twitter base project using HTML / CSS</p>
-                  <p class="card-text"><small class="text-muted">
-                    Test Login Account <br>
-                    Email : test@gmail.com <br>
-                    Password : 12345
-                  </small></p>
-                  <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+            <div class=“right-section”>
+               <p>
+                  <h3>Twitter Clone</h3>
+                  <br>
+                  A Twitter like app which allows you  to post, edit, delete and update your posts!!
+                  <br>
+                  <br>Test Login Account
+                  <br>Email-sample@gmail.com
+                  <br>Password:Pass
+                  <br>
+               </p>
+                  <div class=“btn-group”>
+                     <button class=“button”>Website Link</button>
+                     <button class=“button”>Github code</button>
+                  </div>
             </div>
         </div>
     </div>
