--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<link>
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel ="icon" type="imgage/png" href="techis-logo.png">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css"/>
+   
+    <title>Portfolio</title>
 
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="#"><span>P</span>ortfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto mb-2">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-link active" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                <a class="nav-link active"  href="#">Projects</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     <div id="about">
-        <h2><span class="font-primary">A</span>bout</span></h2>
+        <h2><span class="font-primary">A</span>bout</h2>
         <img src="sample.jpg" alt="the image is failed to load"/>
         <div class="name"><h2>Suneetha Pallapothula</h2></div>
         
@@ -40,34 +42,78 @@
        <h6>I Restarted my Career after long time</h6>
        <div class="email">SuneethaCareer01@gmail.com</div>
        <div class="icons">
-        <ahref="#"><i class="bi bi-github"></i></a>
-        <ahref="#"><i class="bi bi-linkedln ms-3"></i></a>
+        <a href="#" target="blank"><i class="bi bi-github" style="color:rgb(0, 0, 0)"></i></a>
+        <a href="#" target="blank"><i class="bi bi-linkedin ms-3" style="color:rgb(0, 0, 0)"></i></a>
        </div>
     </div>
-    <div id="Projects">
-        <div class=“section”>
-            <div class=“left-section”>
-               <img src="project-twitter.png" alt=“Image” />
+    <div id="projects">
+      <h2><span class="font-primary">P</span>rojects</h2>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="project-twitter.png" alt="twitter-project" />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Twitter Clone</h5>
+              <p class="card-text">
+                A twitter like app which allows you to post, edit, delete and
+                update your posts.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Test Login Account<br/>
+                  Email: sample@gmail.com<br/>
+                  Password: Pass<br /><br/>
+                </small>
+                <a href="" target="_blank" class="btn btn-secondary"
+                  >Website Link</a
+                >
+                <a
+                  href="https://github.com/wostinabin31"
+                  target="_blank"
+                  class="btn btn-secondary"
+                  >Github Code</a
+                >
+              </p>
+              <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
-            <div class=“right-section”>
-               <p>
-                  <h3>Twitter Clone</h3>
-                  <br>
-                  A Twitter like app which allows you  to post, edit, delete and update your posts!!
-                  <br>
-                  <br>Test Login Account
-                  <br>Email-sample@gmail.com
-                  <br>Password:Pass
-                  <br>
-               </p>
-                  <div class=“btn-group”>
-                     <button class=“button”>Website Link</button>
-                     <button class=“button”>Github code</button>
-                  </div>
-            </div>
+          </div>
         </div>
-    </div>
-
+      </div>
+      <div class="card mb-3">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="project-netflix.png" alt="netflix-project" />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Netflix Clone</h5>
+                <p class="card-text">
+                  A Netflix like app which allows you to post, edit, delete and
+                  update your posts.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">
+                    Test Login Account<br/>
+                    Email: sample@gmail.com<br/>
+                    Password: Pass<br /><br/>
+                  </small>
+                  <a href="" target="_blank" class="btn btn-secondary"
+                    >Website Link</a
+                  >
+                  <a
+                    href="https://github.com/wostinabin31"
+                    target="_blank"
+                    class="btn btn-secondary"
+                    >Github Code</a
+                  >
+                </p>
+                <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
