--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Portfolio</title>
 
 </head>
-<body>
+<div>
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
@@ -32,7 +32,7 @@
           </div>
         </div>
       </nav>
-    <div id="about">
+    <id="about">
         <h2><span class="font-primary">A</span>bout</h2>
         <img src="sample.jpg" alt="the image is failed to load"/>
         <div class="name"><h2>Suneetha Pallapothula</h2></div>
@@ -45,7 +45,8 @@
         <a href="#" target="blank"><i class="bi bi-github" style="color:rgb(0, 0, 0)"></i></a>
         <a href="#" target="blank"><i class="bi bi-linkedin ms-3" style="color:rgb(0, 0, 0)"></i></a>
        </div>
-    </div>
+    
+      </div>
     <div id="projects">
       <h2><span class="font-primary">P</span>rojects</h2>
       <div class="card mb-3">
@@ -66,15 +67,8 @@
                   Email: sample@gmail.com<br/>
                   Password: Pass<br /><br/>
                 </small>
-                <a href="" target="_blank" class="btn btn-secondary"
-                  >Website Link</a
-                >
-                <a
-                  href="https://github.com/wostinabin31"
-                  target="_blank"
-                  class="btn btn-secondary"
-                  >Github Code</a
-                >
+                <a href= target= "_blank" class="btn btn-secondary">Website Link</a>
+                <a href="https://github.com/wostinabin31" target="_blank" class="btn btn-secondary">Github Code</a>
               </p>
               <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
@@ -99,15 +93,9 @@
                     Email: sample@gmail.com<br/>
                     Password: Pass<br /><br/>
                   </small>
-                  <a href="" target="_blank" class="btn btn-secondary"
-                    >Website Link</a
-                  >
-                  <a
-                    href="https://github.com/wostinabin31"
-                    target="_blank"
-                    class="btn btn-secondary"
-                    >Github Code</a
-                  >
+                  <a href= " target="_blank" class="btn btn-secondary">Website Link</a>
+                  <a href="https://github.com/wostinabin31" target="_blank" class="btn btn-secondary">Github Code</a>
+                  
                 </p>
                 <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
               </div>
