--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]a-->
+<html>
   <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" type="imgage/png" href="techis-logo.png">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+
+     <link rel="icon" type="image/png" href="./images/techis-logo.png">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -21,10 +31,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto mb-2">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Projects</a>
+                        <a class="nav-link active" href="#projects">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -32,7 +42,7 @@
     </nav>
     <div id="about">
         <h2><span class="font-primary">A</span>bout</h2>
-        <img src="sample.jpg" alt="the image is failed to load" />
+        <img src="./images/sample.jpg" alt="the image is failed to load" />
         <div class="name">
             <h2>Suneetha Pallapothula</h2>
         </div>
@@ -45,7 +55,7 @@
         <h6>I Restarted my Career after long time</h6>
         <div class="email">SuneethaCareer01@gmail.com</div>
         <div class="icons">
-            <a href="#" target="blank"><i class="bi bi-github" style="color:rgb(0, 0, 0)"></i></a>
+            <a href="https://github.com/SuneethaPallapothula123/s-portfolio" target="blank"><i class="bi bi-github" style="color:rgb(0, 0, 0)"></i></a>
             <a href="#" target="blank"><i class="bi bi-linkedin ms-3" style="color:rgb(0, 0, 0)"></i></a>
         </div>
     </div>
@@ -54,7 +64,7 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="project-twitter.png" alt="twitter-project" />
+                    <img src="./images/project-twitter.png" alt="twitter-project" />
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -70,7 +80,7 @@
                               Password: Pass<br /><br />
                             </small>
                             <a href="" target="_blank" class="btn btn-secondary">Website Link</a>
-                            <a href="" target="_blank" class="btn btn-secondary">Github Code</a>
+                            <a href="https://github.com/SuneethaPallapothula123/s-portfolio" target="_blank" class="btn btn-secondary">Github Code</a>
                         </p>
                             <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
                     </div>
@@ -80,7 +90,7 @@
         <div class="card mb-3">
           <div class="row">
               <div class="col-md-4">
-                  <img src="project-netflix.png" alt="netflix-project" />
+                  <img src="./images/project-netflix.png" alt="netflix-project" />
               </div>
               <div class="col-md-8">
                   <div class="card-body">
@@ -96,7 +106,7 @@
                             Password: Pass<br /><br />
                           </small>
                           <a href="" target="_blank" class="btn btn-secondary">Website Link</a>
-                          <a href="" target="_blank" class="btn btn-secondary">Github Code</a>
+                          <a href="https://github.com/SuneethaPallapothula123/s-portfolio" target="_blank" class="btn btn-secondary">Github Code</a>
                       </p>
                           <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
                   </div>
